sepete ekleme fonksiyonu yazıldı ve sepet servis eklendi

--- a/src/app/component/product-list/product-list.component.html
+++ b/src/app/component/product-list/product-list.component.html
@@ -33,6 +33,9 @@
             } }
           </div>
         </div>
+        <button class="add-cart-button" (click)="addToCart(prd, $event)">
+          Sepete Ekle
+        </button>
       </div>
     </div>
     }
