--- a/src/app/component/product-list/product-list.component.scss
+++ b/src/app/component/product-list/product-list.component.scss
@@ -110,6 +110,17 @@
       }
     }
   }
+  .add-cart-button {
+    padding: 7px;
+    background-color: var(--green-color);
+    color: #fff;
+    font-weight: bold;
+    border-radius: 5px;
+    transition: 0.3s ease-in-out;
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
 }
 
 .pagination {
@@ -147,7 +158,7 @@
   }
 }
 
-@media(max-width:1200px){
+@media (max-width: 1200px) {
   .main {
     display: flex;
     flex-direction: column;
