sepet tutarı yuvarlama sorunu düzeltildi

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -46,7 +46,7 @@
         <span class="card-item-title">{{ prd.name }}</span>
         <span>
           <i class="fa-solid fa-turkish-lira-sign"></i
-          >{{ getPrice(prd.price, prd.discount) }}</span
+          >{{ getPrice(prd.price, prd.discount).toFixed(0) }}</span
         >
       </div>
       }
