oy verme işlemindeki hata düzeltildi

--- a/src/app/component/detail/detail.component.html
+++ b/src/app/component/detail/detail.component.html
@@ -48,7 +48,7 @@
       }
       <div class="star">
         <i class="fa-solid fa-star" style="color: orange"></i>
-        <span>{{ activeProduct?.average_rating }}</span>
+        <span>{{ roundToNearestHalf(activeProduct?.average_rating) }}</span>
       </div>
     </div>
     <div class="desc">
