--- a/src/app/component/product-list/product-list.component.scss
+++ b/src/app/component/product-list/product-list.component.scss
@@ -8,10 +8,8 @@
 
 .products-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  width: 90%;
-  max-width: 1200px;
 }
 
 .product-card {
@@ -31,13 +29,13 @@
   overflow: hidden;
   width: 350px;
   height: 250px;
+  display: flex;
+  justify-content: center;
 
   img {
-    width: 100%;
     height: 100%;
-    object-fit: contain;
-    object-position: center;
   }
+
   i {
     position: absolute;
     top: 10px;
@@ -158,16 +156,26 @@
   }
 }
 
-@media (max-width: 1200px) {
-  .main {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    justify-content: center;
+@media only screen and (max-width: 1500px) {
+  .products-list {
+    grid-template-columns: repeat(3, 1fr);
   }
+}
 
+@media only screen and (max-width: 1200px) {
   .products-list {
     grid-template-columns: repeat(2, 1fr);
-    margin-left: 50px;
+  }
+}
+
+@media only screen and (max-width: 968px) {
+  .products-list {
+    grid-template-columns: repeat(1, 1fr);
+
+    .product-card {
+      .card-image {
+        width: 100%;
+      }
+    }
   }
 }
