--- a/src/app/pages/products/products.component.scss
+++ b/src/app/pages/products/products.component.scss
@@ -1,11 +1,9 @@
 .main {
-  display: grid;
-  grid-template-columns: 1fr 4fr;
-  gap: 50px;
+  padding-left: 300px;
+}
 
-  .left-bar {
-    position: fixed;
-    left: 0;
-    top: 0;
+@media (max-width: 768px) {
+  .main {
+    padding-left: 150px;
   }
 }
