--- a/src/app/shared/left-bar/left-bar.component.scss
+++ b/src/app/shared/left-bar/left-bar.component.scss
@@ -1,5 +1,5 @@
 .main {
-  width: 350px;
+  width: 300px;
   height: 100vh;
   background: #1e1e2f;
   position: fixed;
@@ -60,8 +60,9 @@
 // Mobil görünüm için sidebar'ı daralt
 @media (max-width: 768px) {
   .main {
-    width: 80px;
+    width: 150px;
     align-items: center;
+    justify-content: center;
 
     .brand-text {
       display: none;
@@ -70,7 +71,6 @@
     .categories {
       .category {
         font-size: 12px;
-        padding: 10px;
       }
     }
   }
