--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -11,9 +11,9 @@
   .brand {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     cursor: pointer;
-
+    flex: 1;
     h1 {
       font-weight: normal;
       text-transform: uppercase;
@@ -27,6 +27,7 @@
     align-items: center;
     justify-content: center;
     gap: 50px;
+    flex: 1;
 
     .navbar-list-item {
       height: 50px;
@@ -69,10 +70,11 @@
   .personal {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     gap: 30px;
     height: 100%;
     text-transform: uppercase;
+    flex: 1;
 
     div,
     i {
@@ -218,4 +220,96 @@
       }
     }
   }
+}
+
+.search-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.search-container {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  width: 50%;
+  max-width: 600px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+
+  input {
+    width: 100%;
+    padding: 10px;
+    font-size: 18px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+  }
+
+  .search-results {
+    position: absolute;
+    width: 100%;
+    max-width: 600px;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 10px 0;
+    list-style: none;
+    z-index: 1000;
+
+    .search-item {
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      gap: 10px;
+      transition: background 0.3s ease-in-out;
+      cursor: pointer;
+
+      img {
+        width: 50px;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 5px;
+      }
+
+      &:hover {
+        background: #f1f1f1;
+      }
+
+      .product-info {
+        display: flex;
+        align-items: center;
+        width: 100%;
+
+        h4 {
+          margin: 0;
+          font-size: 16px;
+          font-weight: bold;
+        }
+
+        p {
+          margin: 0;
+          color: #4caf50;
+          font-size: 14px;
+          margin-left: auto;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1500px) {
+}
+
+@media only screen and (max-width: 1200px) {
+}
+
+@media only screen and (max-width: 968px) {
 }
