--- a/src/app/component/detail/detail.component.scss
+++ b/src/app/component/detail/detail.component.scss
@@ -148,3 +148,56 @@
     }
   }
 }
+
+.similar-products {
+  margin-top: 40px;
+  padding: 20px;
+
+  h3 {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 25px;
+  }
+
+  .products-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 15px;
+  }
+
+  .product-card {
+    background: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+
+    &:hover {
+      transform: translateY(-5px);
+    }
+
+    .card-image {
+      img {
+        width: 100%;
+        height: 150px;
+        object-fit: contain;
+      }
+    }
+
+    .card-content {
+      padding: 10px;
+      text-align: center;
+
+      .card-title {
+        font-size: 16px;
+        font-weight: bold;
+      }
+
+      .card-price {
+        font-size: 14px;
+        color: green;
+      }
+    }
+  }
+}
