--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -243,6 +243,7 @@
   max-width: 600px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
+  position: relative;
 
   input {
     width: 100%;
@@ -256,6 +257,8 @@
   .search-results {
     position: absolute;
     width: 100%;
+    left: 0;
+    margin-top: 20px;
     max-width: 600px;
     background: white;
     border-radius: 10px;
